# macos-system-info-library

./: .gitignore  CMakeLists.txt  README.md  SMCKit.cpp  SMCKit.h  SMCParamStruct.h  System.cpp  System.h  Utils.h  main.cpp
